NIVASA-01 : chore: update server script and add database schema documentation. -LM

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "client": "cd frontend && npm run dev",
-    "server": "cd backend && nodemon index.js",
+    "server": "cd backend && npm start",
     "dev": "concurrently \"npm run client\" \"npm run server\""
   }
 }
