--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.0.0",
     "formik": "^2.4.6",
+    "lucide-react": "^0.309.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
