--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "scripts": {
     "client": "cd frontend && npm run dev",
-    "server": "cd backend && nodemon index.js",
+    "server": "cd backend && npm run start-full",
     "dev": "concurrently \"npm run client\" \"npm run server\""
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0"
   }
 }
