--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "concurrently \"npm run client\" \"npm run server\"",
     "client": "npm run dev --workspace=frontend",
     "server": "npm run dev-full --workspace=backend",
-    "build": "npm run build --workspaces"
+    "build": "npm run build --workspaces",
+    "install:all": "npm install --workspaces"
   },
   "devDependencies": {
     "concurrently": "^9.2.1"
